test/sema/struct_instantiation_in_assignment_lhs.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { x: number }

fn main(): unit {
  // CHECK: [[# @LINE + 1 ]]:4: error: cannot assign to rvalue
  S{x: 1} = S{x: 2};
}
